--- a/PageAccueil.html
+++ b/PageAccueil.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documzeazent</title>
 </head>
+<header>
+    <aside>
+  <h1>Liens utiles </h1>
+  <ul>
+    <li><a href="tp3/Index.html"><h1>Index :-)</h1> </a> </li>
+  </ul>
+  <nav>
+  <ul>
+    <li><a href="PageAccueil.html">Page d'accueil</a></li>
+    <li><a href="test.html">test</a></li>
+  </ul>
+</nav>
+
+</aside>  
+</header>
 <body>
-    azeazeazeazeaeza
+
+   <ul>
+    <li><h1>une liste</h1></li>
+    <li><h3>une autre </h3></li>
+   </ul>
+   
+
 </body>
 </html>
