--- a/tp3/Index.html
+++ b/tp3/Index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <article>
+  <p>
+    <a href="../PageAccueil.html"> 
+    Accueil :-)</a>
+    <br /> 
+    Sous ce titre quelque peu provocateur (et faux) se cache une réalité officielle :
+    le W3C vient d'annoncer que ses travaux sur XHTML 2 se termineront en 2009.
+  </p>
+</article>
 </body>
 </html>
