--- a/Index.html
+++ b/Index.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documzeazent</title>
+    <title>Document</title>
 </head>
 <header>
     <aside>
-  <h1>Liens utiles </h1>
-  <ul>
-    <li><a href="tp3/Index.html"><h1>Index :-)</h1> </a> </li>
-  </ul>
+  <h1>Liens utiles</h1>
   <nav>
-  <ul>
-    <li><a href="PageAccueil.html">Page d'accueil</a></li>
-    <li><a href="test.html">test</a></li>
-  </ul>
-</nav>
+    <a href="tp3/Exercice1.html">Doc Html</a>
+    <a href="tp3/Exercice2.html">Exercice 2</a>
+
+  </nav>
 
 </aside>  
 </header>
@@ -25,8 +21,8 @@
    <ul>
     <li><h1>une liste</h1></li>
     <li><h3>une autre </h3></li>
+    <h1>Une photo de Yanis notre délegué</h1>
+    <img src="tp3/IMG_0599.webp" alt="">
    </ul>
-   <p>azeazeaze</p>
-
 </body>
 </html>
