--- a/tp3/Exercice2.html
+++ b/tp3/Exercice2.html
@@ -13,42 +13,54 @@
   </ul>
 
     </header>
-     <article>
-      <h1>1. Le langage SQL</h1>
-      <h2>1.1. Définition</h2>
-    
-      <p> 
-    
-    Le langage SQL (Structured Query Language ou Langage de requêtes structuré) est un langage comprenant à lui seul l’ensemble
-des ordres nécessaires à la création et à la gestion d’une base de données relationnelle. Il a été créé en 1986 et est en fait
-l’aboutissement de plusieurs langages (Sequel en 1977, System/R, …) créés depuis l’apparition du modèle relationnel en 1970
-(le modèle relationnel a été inventé par Mr Codd, un mathématicien de chez IBM). L'utilisation du langage SQL suppose
-obligatoirement que les données aient été définies selon le modèle relationnel au sein d'un SGBDR (Oracle ©, SQLServer, mySQL,
-PostgreSQL…).
-  </p>
-  <h2>1.2. Les différentes normes utilisées</h2>
-  <p>Il existe aujourd'hui plusieurs normes relatives à l'utilisation du langage SQL. La différence entre ces deux normes se situe
-principalement dans l'écriture des jointures et dans l'ajout de fonctionnalités. :</p>
-<ul>
-  <li>La norme SQL 89 qui est encore très utilisée actuellement</li>
-  <li>La norme SQL 92</li>
-  <li>Aujourd'hui SQL 2011</li>
-  </ul>
-  <p>Bien qu'il existe des normes il peut y avoir des différences entre SGBDR dans la syntaxe. Ainsi on peut lire sur le site de PostgreSQL:</p>
-  <ul>
-    <li>"Le développement de PostgreSQL™ respecte le standard en vigueur, tant que celui-ci ne s'oppose pas aux fonctionnalités
-traditionnelles ou au bon sens…"</li>
-<li>"SQL-92 définit trois niveaux de conformité : basique (ENTRY), intermédiaire (INTERMEDIATE) et complète (FULL). La majorité des
-systèmes de gestion de bases de données se prétendaient compatibles au standard SQL dès lors qu'ils se conformaient au niveau
-Entry"</li>
-</ul>
-<h1>2. Le modèle de données utilisé dans le cours</h1>
-<ol>
-  <li>Le modèle entité-association (ou MCD) d'un établissement hospitalier</li>
-  <li>Le modèle relationnel (ou MRD) d'un établissement hospitalier</li>
-  <li> La description textuelle des tables utilisées</li>
-</ol>
+    <body>
 
-</article>
+    <h1>1. Le langage SQL</h1>
+
+    <h2>1.1. Définition</h2>
+    <p>
+        Le langage <strong>SQL</strong> (Structured <strong>Query</strong> Language ou Langage de requêtes structuré) est un langage comprenant à lui seul l'ensemble des ordres nécessaires à la création et à la gestion d'une base de données relationnelle. Il a été créé en <strong>1986</strong> et est en fait l'aboutissement de plusieurs langages (Sequel en 1977, System/R, ...) créés depuis l'apparition du modèle relationnel en 1970 (le modèle relationnel a été inventé par Mr Codd, un mathématicien de chez IBM). L'utilisation du langage <strong>SQL</strong> suppose obligatoirement que les données aient été définies selon le modèle relationnel au sein d'un <strong>SGBDR</strong> (Oracle ©, <strong>SQLServer</strong>, <strong>mySQL</strong>, <strong>PostgreSQL</strong>...).
+    </p>
+
+    <h2>1.2. Les différentes normes utilisées</h2>
+    <p>
+        Il existe aujourd'hui plusieurs normes relatives à l'utilisation du <strong>langage SQL</strong>. La différence entre ces deux normes se situe principalement dans l'écriture des jointures et dans l'ajout de fonctionnalités. :
+    </p>
+
+    <ul>
+        <li>La norme <strong>SQL 89</strong> qui est encore très utilisée actuellement.</li>
+        <li>La norme <strong>SQL 92</strong>.</li>
+        <li>Aujourd'hui <strong>SQL 2011</strong>.</li>
+    </ul>
+
+    <p>
+        Bien qu'il existe des normes il peut y avoir des différences entre <em>SGBDR</em> dans la syntaxe. Ainsi on peut lire sur le site de <strong><u>PostgreSQL</u></strong>:
+    </p>
+
+    <ul>
+        <li>
+            "Le développement de <em>PostgreSQL™</em> respecte le standard en vigueur, tant que celui-ci ne <em>s'oppose pas aux fonctionnalités traditionnelles ou au bon sens...</em>"
+        </li>
+        <li>
+            "<em>SQL-92</em> définit trois niveaux de conformité : basique (<em>ENTRY</em>), intermédiaire (<em>INTERMEDIATE</em>) et complète (<em>FULL</em>). La majorité des systèmes de gestion de bases de données se prétendaient compatibles au standard <em>SQL</em> dès lors qu'ils se conformaient au niveau Entry"
+        </li>
+    </ul>
+
+    <h1>2. Le modèle de données utilisé dans le cours</h1>
+
+    <h2>2.1. Le modèle entité-association (ou MCD) d'un établissement hospitalier</h2>
+    <h2>2.2. Le modèle relationnel (ou MRD) d'un établissement hospitalier</h2>
+    <h2>2.3. La description textuelle des tables utilisées</h2>
+
+    <p>
+        <mark><strong>fonction_personnel</strong></mark> (<u>code_fonction</u>, libelle_fonction)<br>
+        Clé primaire : <em>code_fonction</em>
+    </p>
+    <br>
+    <p>
+        <mark><strong>service</strong></mark> (<u>num_service</u>, libelle_service, capacite_accueil, date_ouverture)<br>
+        Clé primaire : <em>num_service</em>
+    </p>
+
 </body>
 </html>
