--- a/tp3/Exercice2.html
+++ b/tp3/Exercice2.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="../index.html">Accueil</a></li>
       <li><a href="Exercice1.html">Doc Html</a></li>
+      <li><a href="Exercice3.html">Exercice 3</a></li>
   </ul>
 
     </header>
