--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <nav>
     <a href="tp3/Exercice1.html">Doc Html</a>
     <a href="tp3/Exercice2.html">Exercice 2</a>
+    <a href="tp3/Exercice3.html"></a>
 
   </nav>
 
