--- a/tp3/Exercice1.html
+++ b/tp3/Exercice1.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-
+    <a href="../index.html">La page du début</a>
+    <a href="Exercice2.html">Exercice2</a>
+    <a href="Exercice3.html">Exercice3</a>
     <h1>Mémento des balises essentielles (Source : Alsacréations)</h1>
     <p>Ci-dessous les exemples donnés dans l'article, affichés sans CSS.</p>
     <hr>
