--- a/tp3/Exercice3.html
+++ b/tp3/Exercice3.html
@@ -7,6 +7,9 @@
 <body>
 
     <header>
+        <a href="Exercice1.html">Doc Html</a>
+        <a href="Exercice2.html">Exercice 2</a>
+        <a href="../index.html">La page du début</a>
         <h1>MATTHÉO LE PAPE</h1>
         <p><strong>Actuellement en étude supérieures en BTS SIO à Valence</strong></p>
     </header>
