--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <header>
     <aside>
-  <h1>Liens utiles</h1>
+  <h1>TP3</h1>
   <nav>
-    <a href="tp3/Exercice1.html">Doc Html</a>
-    <a href="tp3/Exercice2.html">Exercice 2</a>
-    <a href="tp3/Exercice3.html"></a>
-
+    <ul>
+   <li> <a href="tp3/Exercice1.html">Doc Html</a></li>
+    <li><a href="tp3/Exercice2.html">Exercice 2</a></li>
+    <li><a href="tp3/Exercice3.html">Exercice 3</a></li>
+    </ul>
   </nav>
 
 </aside>  
@@ -20,10 +21,12 @@
 <body>
 
    <ul>
-    <li><h1>une liste</h1></li>
-    <li><h3>une autre </h3></li>
-    <h1>Une photo de Yanis notre délegué</h1>
+    <li><h2>une liste</h2></li>
+    <li><h2>une autre </h2></li>
+    <h1>Une photo de Yanis notre délégué</h1>
     <img src="tp3/IMG_0599.webp" alt="">
+    <br>
+    <a href="tp3/IMG_0599.webp" download="Yanis"> Download la photographie de notre délégué</a>
    </ul>
 </body>
 </html>
