--- a/tp3/Exercice1.html
+++ b/tp3/Exercice1.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">La page du début</a>
-    <a href="Exercice2.html">Exercice2</a>
-    <a href="Exercice3.html">Exercice3</a>
+    <ul>
+    <li><a href="../index.html">La page du début</a></li>
+    <li><a href="Exercice2.html">Exercice2</a></li>
+    <li><a href="Exercice3.html">Exercice3</a></li>
+    </ul>
     <h1>Mémento des balises essentielles (Source : Alsacréations)</h1>
     <p>Ci-dessous les exemples donnés dans l'article, affichés sans CSS.</p>
     <hr>
